# patch-compliance-dashboard

./: .env.example  .gitignore  README.md  docker-compose.yml
.github/workflows/: ci.yml  deploy-app.yml  deploy-infra.yml
app/: Dockerfile  dashboard.py
app/.streamlit/: secrets.toml.example
app/tests/: test_dashboard.py
common/: pyproject.toml
common/patch_domain/: aws_clients.py  interfaces.py  models.py  services.py
common/patch_domain/repositories/: dynamodb_repository.py  in_memory_repository.py
common/patch_domain/sources/: mock_source.py  ssm_source.py
common/tests/: test_aws_clients.py  test_mock_source.py  test_services.py
docs/: architecture.md  case-study.md
lambda/patch_collector/: handler.py  requirements.txt
lambda/patch_collector/tests/: test_handler.py
scripts/: destroy_demo.sh  seed_localstack.py  setup_localstack.sh
terraform/bootstrap/: main.tf
terraform/environments/demo/: backend.tf  main.tf  outputs.tf  variables.tf
terraform/modules/dynamodb/: main.tf  outputs.tf  variables.tf
terraform/modules/eventbridge/: main.tf  outputs.tf  variables.tf
terraform/modules/lambda/: main.tf  outputs.tf  variables.tf
terraform/modules/streamlit_access/: main.tf  outputs.tf  variables.tf
