[project]
name = "patch-domain"
version = "0.1.0"
description = "Shared domain models, interfaces, sources and repositories for the patch compliance dashboard"
requires-python = ">=3.11"
dependencies = [
    "boto3>=1.34",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-cov>=5.0",
]

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["."]
include = ["patch_domain*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
